--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,10 @@
-package: github.com/adyzng/go-duka
+package: github.com/leifcr/go-duka
 import:
 - package: github.com/go-clog/clog
   version: ^1.1.1
 - package: github.com/kjk/lzma
-- package: golang.org/x/sys/unix
+- package: golang.org/x/sys
+  subpackages:
+  - unix
+- package: github.com/fatih/color
+  version: ~1.7.0
