* Make project to be go module   * Make code compilable * Fix README.md examples to be runnable * Fix all open file and create directory permissions

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/leifcr/go-duka
+package: github.com/ed-fx/go-duka
 import:
 - package: github.com/go-clog/clog
   version: ^1.1.1
