--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -5,4 +5,4 @@ name = "go"
 enabled = true
 
   [analyzers.meta]
-  import_paths = ["github.com/ed-fx/go-duka"]
+  import_paths = ["github.com/edward-yakop/go-duka"]
